--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@prisma/client": "^5.19.1",
     "@tailwindcss/forms": "^0.5.7",
     "carrot-market-reloaded": "file:",
     "next": "14.2.5",
+    "prisma": "^5.19.1",
     "react": "^18",
     "react-dom": "^18",
+    "validator": "^13.12.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/validator": "^13.12.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
