--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@heroicons/react": "^2.1.5",
     "@prisma/client": "^5.19.1",
     "@tailwindcss/forms": "^0.5.7",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "carrot-market-reloaded": "file:",
+    "iron-session": "^8.0.3",
     "next": "14.2.5",
     "prisma": "^5.19.1",
     "react": "^18",
     "react-dom": "^18",
+    "twilio": "^5.3.1",
     "validator": "^13.12.0",
     "zod": "^3.23.8"
   },
